webgpu/lessons/webgpu-wgsl-function-reference.css
#func-toc {
  columns: 11em;
  column-rule: dashed 1px var(--column-rule-color);
  font-size: medium;
  max-width: 90%;
  word-break: break-all;
  line-height: 150%;
}
#func-toc li {
  list-style: none;
  padding-left: 1em;
  text-indent: -1em;
}
#func-toc a {
  text-decoration: none;
}
.data-table {
  pre {
    white-space: pre;
  }

  td:nth-child(2) {
    white-space: pre-line;
  }

  td.full-description {
    padding-top: 1em;
    border-top: 3px solid var(--byte-border-color);

    .builtin {
      font-size: medium;
    }
  }

  /* special cases */
  #builtin-atomic-compare-exchange-weak pre, 
  #builtin-workgroupUniformLoad-builtin pre, 
  #builtin-bitcast-builtin pre,
  #builtin-frexp-builtin pre,
  #builtin-modf-builtin pre {
    white-space: normal;
  }
  table#functions-atomic-builtin-functions>thead>tr>th:nth-child(2),
  table#functions-atomic-builtin-functions>tbody>tr>td:nth-child(2),
  table#functions-pack-builtin-functions>thead>tr>th:nth-child(2),
  table#functions-pack-builtin-functions>tbody>tr>td:nth-child(2),
  table#functions-unpack-builtin-functions>thead>tr>th:nth-child(2),
  table#functions-unpack-builtin-functions>tbody>tr>td:nth-child(2),
  table#functions-subgroup-builtin-functions>thead>tr>th:nth-child(2),
  table#functions-subgroup-builtin-functions>tbody>tr>td:nth-child(2),
  table#functions-quad-builtin-functions>thead>tr>th:nth-child(2),
  table#functions-quad-builtin-functions>tbody>tr>td:nth-child(2),
  table#functions-texture-builtin-functions>thead>tr>th:nth-child(3),
  table#functions-texture-builtin-functions>tbody>tr>td:nth-child(3) {
    display: none;
  }
}

